--- a/app/src/main/res/layout/fragment_teacher_settings.xml
+++ b/app/src/main/res/layout/fragment_teacher_settings.xml
@@ -9,9 +9,6 @@
     tools:context=".Teacher.TeacherSettingsFragment">
 
     <!-- Settings Icon -->
-
-    <!-- Title -->
-
     <ImageView
         android:id="@+id/imgSetting"
         android:layout_width="35dp"
@@ -22,14 +19,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Title -->
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
+        android:layout_marginLeft="5dp"
         android:fontFamily="@font/inknut_antiqua_light"
         android:text="Settings"
-        android:layout_marginLeft="5dp"
         android:textColor="#800000"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -38,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0" />
 
-    <!-- Profile + Actions Container -->
+    <!-- Card Container -->
     <LinearLayout
         android:id="@+id/llBackground"
         android:layout_width="0dp"
@@ -48,15 +46,9 @@
         android:background="@drawable/search_background"
         android:orientation="vertical"
         android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtTitle"
-        app:layout_constraintVertical_bias="0.158">
-
-        <!-- Card with Profile Info -->
-        <!-- You can keep the original layout inside this card. Just fix image height -->
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -69,85 +61,47 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#FDFDFD"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:padding="16dp">
 
-                <ImageView
-                    android:id="@+id/imgAvatar"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:src="@drawable/avatar2" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/tvTeacherName"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingStart="12dp">
+                    android:text="Teacher Name"
+                    android:textColor="#000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/tvTeacherName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Teacher Name"
-                        android:textColor="#000"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/tvAge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Age: 40" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Grade: 9th" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Age: 25" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="8dp"
-                        android:text="ID: 1221020" />
-
-                    <Button
-                        android:id="@+id/btnAboutUs"
-                        android:layout_width="150dp"
-                        android:layout_height="48dp"
-                        android:backgroundTint="#A9ADB0"
-                        android:text="About Us"
-                        app:icon="@drawable/aboutus" />
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/tvPhone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Phone: 0599..." />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <!-- Empty Cards -->
-        <androidx.cardview.widget.CardView
+        <Button
+            android:id="@+id/btnAboutUs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:background="#CCFFCC"
-            app:cardCornerRadius="12dp"
-            app:cardElevation="6dp" />
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FF9999"
-            app:cardCornerRadius="12dp"
-            app:cardElevation="6dp" />
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#A9ADB0"
+            android:text="About Us" />
 
         <Button
             android:id="@+id/btnLogout"
-            android:layout_width="152dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
             android:backgroundTint="#971F17"
             android:text="Logout"
-            android:textSize="20sp"
-            app:icon="@drawable/logout" />
+            android:textSize="18sp" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
