--- a/app/src/main/res/layout/fragment_registrar_add_student.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_student.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F4F6F7"
-    tools:context=".AddStudentActivity">
+    tools:context="Registrar.RegistrarAddStudentFregment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,7 +52,7 @@
                 android:hint="Date Of Birth" />
 
             <EditText
-                android:id="@+id/edtEmail1"
+                android:id="@+id/edtEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
@@ -75,6 +75,13 @@
                 android:hint="Class" />
 
             <EditText
+                android:id="@+id/edtParent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:hint="Parent Name" />
+
+            <EditText
                 android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -83,7 +90,7 @@
                 android:inputType="textPassword" />
 
             <EditText
-                android:id="@+id/edtEmail"
+                android:id="@+id/edtConfirmPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
@@ -98,6 +105,15 @@
                 android:backgroundTint="#8B0000"
                 android:text="Add Student"
                 android:textColor="#FFFFFF" />
+            <TextView
+                android:id="@+id/txtStatusMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:gravity="center"
+                android:textColor="@android:color/holo_green_dark"
+                android:visibility="gone"
+                android:text="Status message here" />
         </LinearLayout>
 
     </LinearLayout>
