--- a/app/src/main/res/layout/fragment_registrar_home.xml
+++ b/app/src/main/res/layout/fragment_registrar_home.xml
@@ -112,29 +112,102 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/inknut_antiqua_light"
-                    android:text="•Students: 130       •Events: 130 "
-                    android:textColor="#212121" />
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inknut_antiqua_light"
+                        android:text="•Teachers : "
+                        android:textColor="#212121" />
+
+                    <TextView
+                        android:id="@+id/tvTeachersNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inknut_antiqua_light"
+                        android:text="34               "
+                        android:textColor="#212121" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inknut_antiqua_light"
+                        android:text="•Students : "
+                        android:textColor="#212121" />
+
+                    <TextView
+                        android:id="@+id/tvStudentNumbers"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inknut_antiqua_light"
+                        android:text="34               "
+                        android:textColor="#212121" />
+
+
+                </LinearLayout>
+
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inknut_antiqua_light"
+                        android:text="•Classes : "
+                        android:textColor="#212121" />
+
+                    <TextView
+                        android:id="@+id/tvClassesNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inknut_antiqua_light"
+                        android:text="34                  "
+                        android:textColor="#212121" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inknut_antiqua_light"
+                        android:text="•Subjects : "
+                        android:textColor="#212121" />
+
+                    <TextView
+                        android:id="@+id/tvSubjectNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/inknut_antiqua_light"
+                        android:text="34               "
+                        android:textColor="#212121" />
+
+
+                </LinearLayout>
 
                 <TextView
+                    android:id="@+id/tvEvents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:fontFamily="@font/inknut_antiqua_light"
-                    android:text="•Teachers :123       •Exams: 130"
+                    android:text="•Events : "
                     android:textColor="#212121" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/inknut_antiqua_light"
-                    android:text="•Classes :123 "
-                    android:textColor="#212121" />
+
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
@@ -188,29 +261,29 @@
                 android:padding="16dp">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/inknut_antiqua"
                     android:text="Upcoming Events"
                     android:textColor="#7D0000"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/inknut_antiqua"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/inknut_antiqua_light"
                     android:text="•MidTerms May 12-18"
-                    android:layout_marginTop="4dp"
-                    android:textColor="#0B0808"
-                    android:fontFamily="@font/inknut_antiqua_light"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textColor="#0B0808" />
 
                 <TextView
-                    android:text="•Oppen Day May 20"
-                    android:layout_marginTop="4dp"
-                    android:textColor="#0B0808"
-                    android:fontFamily="@font/inknut_antiqua_light"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/inknut_antiqua_light"
+                    android:text="•Oppen Day May 20"
+                    android:textColor="#0B0808" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
@@ -223,42 +296,7 @@
             app:cardElevation="4dp"
             app:cardBackgroundColor="@android:color/white">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
 
-                <TextView
-                    android:text="Last Notification"
-                    android:textColor="#7D0000"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/inknut_antiqua"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:text="• Ahmed – “Algebra HW”  -1hr ago"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/inknut_antiqua_light"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:text="• Nour – “Arabic HW”  -5hr ago"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/inknut_antiqua_light"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:text="• Ali – “WWE HW”  -15hr ago"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/inknut_antiqua_light"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
     </LinearLayout>
