--- a/app/src/main/res/layout/fragment_registrar_settings_fregment.xml
+++ b/app/src/main/res/layout/fragment_registrar_settings_fregment.xml
@@ -97,21 +97,48 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/tvRole"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Role : Registrar" />
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Age: 25" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tvLabelAge"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Age: " />
+
+                        <TextView
+                            android:id="@+id/tvAge"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="34" />
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingBottom="8dp"
-                        android:text="ID: 1221020" />
+                        android:text="ID:  " />
 
+                        <TextView
+                            android:id="@+id/tvId"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="8dp"
+                            android:text="1221020" />
+                    </LinearLayout>
                     <Button
                         android:id="@+id/btnAboutUs"
                         android:layout_width="150dp"
