--- a/app/src/main/res/layout/fragment_teacher_leader_board.xml
+++ b/app/src/main/res/layout/fragment_teacher_leader_board.xml
@@ -8,12 +8,7 @@
     android:background="#E8ECEF"
     tools:context=".Teacher.TeacherLeaderBoardFragment">
 
-    <!-- Leaderboard Icon -->
-
-    <!-- Title -->
-
-    <!-- Subject Spinner -->
-
+    <!-- Leaderboard Icon and Title -->
     <ImageView
         android:id="@+id/imgLraderboard"
         android:layout_width="41dp"
@@ -41,28 +36,25 @@
         app:layout_constraintTop_toTopOf="@id/imgLraderboard"
         app:layout_constraintVertical_bias="0.466" />
 
-    <Spinner
-        android:id="@+id/spnSubject"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/search_background"
+    <!-- Class Label and Spinner -->
+    <TextView
+        android:id="@+id/tvClassLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Class:"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:fontFamily="@font/inknut_antiqua"
-        android:padding="8dp"
-        android:textColor="#000"
-        android:spinnerMode="dropdown"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/imgLraderboard"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <!-- Class Spinner -->
     <Spinner
         android:id="@+id/spnClass"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/search_background"
@@ -70,7 +62,37 @@
         android:padding="8dp"
         android:textColor="#000"
         android:spinnerMode="dropdown"
-        app:layout_constraintTop_toBottomOf="@id/spnSubject"
+        app:layout_constraintTop_toBottomOf="@id/tvClassLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Subject Label and Spinner -->
+    <TextView
+        android:id="@+id/tvSubjectLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Subject:"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/inknut_antiqua"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/spnClass"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/spnSubject"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/search_background"
+        android:fontFamily="@font/inknut_antiqua"
+        android:padding="8dp"
+        android:textColor="#000"
+        android:spinnerMode="dropdown"
+        app:layout_constraintTop_toBottomOf="@id/tvSubjectLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -88,10 +110,8 @@
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spnClass"
-        app:layout_constraintVertical_bias="0.197">
+        app:layout_constraintTop_toBottomOf="@id/spnSubject">
 
         <!-- First Place Card -->
         <androidx.cardview.widget.CardView
@@ -230,5 +250,4 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
