--- a/app/src/main/res/layout/fragment_teacher_send_assignment.xml
+++ b/app/src/main/res/layout/fragment_teacher_send_assignment.xml
@@ -41,16 +41,38 @@
             android:background="#D9D9D9"
             android:padding="20dp">
 
+            <!-- Class -->
+            <TextView
+                android:id="@+id/classLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/alatsi"
+                android:text="Class:"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Spinner
+                android:id="@+id/spnClasses"
+                android:layout_width="0dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/alatsi"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/classLabel"
+                app:layout_constraintTop_toTopOf="@id/classLabel" />
+
             <!-- Subject -->
             <TextView
                 android:id="@+id/subjectLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:fontFamily="@font/alatsi"
                 android:text="Subject:"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/spnClasses" />
 
             <Spinner
                 android:id="@+id/spnSubjects"
@@ -62,28 +84,6 @@
                 app:layout_constraintStart_toEndOf="@id/subjectLabel"
                 app:layout_constraintTop_toTopOf="@id/subjectLabel" />
 
-            <!-- Class -->
-            <TextView
-                android:id="@+id/classLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/alatsi"
-                android:text="Class:"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/spnSubjects" />
-
-            <Spinner
-                android:id="@+id/spnClasses"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:fontFamily="@font/alatsi"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/classLabel"
-                app:layout_constraintTop_toTopOf="@id/classLabel" />
-
             <!-- Title -->
             <TextView
                 android:id="@+id/titleLabel"
@@ -94,7 +94,7 @@
                 android:text="Title:"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/spnClasses" />
+                app:layout_constraintTop_toBottomOf="@id/spnSubjects" />
 
             <EditText
                 android:id="@+id/titleInput"
@@ -116,7 +116,6 @@
                 android:fontFamily="@font/alatsi"
                 android:text="Description:"
                 android:textSize="20sp"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/titleInput" />
 
@@ -145,7 +144,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/descInput" />
 
-            <!-- Due Time -->
             <EditText
                 android:id="@+id/dueDateInput"
                 android:layout_width="0dp"
@@ -155,19 +153,18 @@
                 android:focusable="false"
                 android:hint="May 10, 2025"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@id/dueDateLabel"
                 app:layout_constraintTop_toTopOf="@id/dueDateLabel" />
 
+            <!-- Due Time -->
             <TextView
                 android:id="@+id/dueTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:textSize="20sp"
-
                 android:fontFamily="@font/alatsi"
                 android:text="Due Time:"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/dueDateInput" />
 
