--- a/app/src/main/res/layout/fragment_registrar_add_event.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_event.xml
@@ -59,11 +59,6 @@
             android:layout_height="wrap_content"
             android:hint="Location" />
 
-        <Spinner
-            android:id="@+id/spnEventAudience"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,28 +77,6 @@
             android:inputType="textMultiLine"
             android:minLines="4" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/edtEventFile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="Attach File:" />
-
-            <Button
-                android:id="@+id/chooseFileButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#AAAAAA"
-                android:text="Choose File"
-                android:textColor="#000000" />
-        </LinearLayout>
 
         <Button
             android:id="@+id/btnPostEvent"
@@ -120,7 +93,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Event"
+        android:text="Post Event"
         android:textColor="#800000"
         android:textSize="22sp"
         android:textStyle="bold"
