--- a/app/src/main/res/layout/fragment_registrar_add_student.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_student.xml
@@ -67,8 +67,8 @@
                 android:hint="Phone"
                 android:inputType="phone" />
 
-            <EditText
-                android:id="@+id/edtClass"
+            <Spinner
+                android:id="@+id/spnClasses"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
