--- a/app/src/main/res/layout/fragment_teacher_settings.xml
+++ b/app/src/main/res/layout/fragment_teacher_settings.xml
@@ -36,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0" />
 
-    <!-- Card Container -->
+    <!-- Profile + Actions Container -->
     <LinearLayout
         android:id="@+id/llBackground"
         android:layout_width="0dp"
@@ -46,10 +46,14 @@
         android:background="@drawable/search_background"
         android:orientation="vertical"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/txtTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/txtTitle"
+        app:layout_constraintVertical_bias="0.158">
 
+        <!-- Profile Card -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -61,47 +65,110 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:background="#FDFDFD"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
                 android:padding="16dp">
 
-                <TextView
-                    android:id="@+id/tvTeacherName"
-                    android:layout_width="wrap_content"
+                <ImageView
+                    android:id="@+id/imgAvatar"
+                    android:layout_width="67dp"
                     android:layout_height="wrap_content"
-                    android:text="Teacher Name"
-                    android:textColor="#000"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:src="@drawable/avatar2" />
 
-                <TextView
-                    android:id="@+id/tvAge"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Age: 40" />
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:paddingStart="12dp">
 
-                <TextView
-                    android:id="@+id/tvPhone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Phone: 0599..." />
+                    <TextView
+                        android:id="@+id/tvTeacherName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="12dp"
+                        android:text="Teacher Name"
+                        android:textColor="#000"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal"
+                        android:paddingStart="12dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Age: "
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tvAge"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="40" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal"
+                        android:paddingStart="12dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Phone: "
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tvPhone"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0599..." />
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/btnAboutUs"
+                        android:layout_width="147dp"
+                        android:layout_height="37dp"
+                        android:backgroundTint="#A9ADB0"
+                        android:text="About Us"
+                        android:layout_gravity="center_horizontal"
+                        app:icon="@drawable/aboutus" />
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/btnAboutUs"
+        <!-- Empty Cards -->
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:backgroundTint="#A9ADB0"
-            android:text="About Us" />
+            android:layout_marginBottom="12dp"
+            android:background="#CCFFCC"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="6dp" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FF9999"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="6dp" />
 
         <Button
             android:id="@+id/btnLogout"
-            android:layout_width="match_parent"
+            android:layout_width="152dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_gravity="center_horizontal"
             android:backgroundTint="#971F17"
             android:text="Logout"
-            android:textSize="18sp" />
+            android:textSize="20sp"
+            app:icon="@drawable/logout" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
