--- a/app/src/main/res/layout/fragment_registrar_schedule.xml
+++ b/app/src/main/res/layout/fragment_registrar_schedule.xml
@@ -17,7 +17,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center">
+
 
             <!-- Dropdown section -->
             <TextView
@@ -68,10 +70,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
-                <Spinner
-                    android:id="@+id/spnEndTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                <Button
+                    android:id="@+id/btnCheckConflict"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="12dp"
+                    android:backgroundTint="#0d7097"
+                    android:text="Check Conflict "
+                    android:textColor="@android:color/white" />
+
 
                 <Button
                     android:id="@+id/btnAddSchedule"
@@ -86,39 +94,16 @@
 
             <!-- Schedule Table (use RecyclerView or TableLayout dynamically later) -->
             <TableLayout
+                android:id="@+id/tableSchedule"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:stretchColumns="1,2,3,4,5"
-                android:background="@android:color/darker_gray">
+                android:stretchColumns="1,2,3,4,5,6,7"
+                android:background="#CCCCCC"
+                android:padding="4dp"
+                android:layout_margin="8dp"/>
 
-                <TableRow>
-                    <TextView android:text="" />
-                    <TextView android:text="Mon" android:background="#FFEB3B" android:gravity="center"/>
-                    <TextView android:text="Tue" android:background="#FFEB3B" android:gravity="center"/>
-                    <TextView android:text="Wed" android:background="#FFEB3B" android:gravity="center"/>
-                    <TextView android:text="Thu" android:background="#FFEB3B" android:gravity="center"/>
-                    <TextView android:text="Fri" android:background="#FFEB3B" android:gravity="center"/>
-                </TableRow>
-
-                <TableRow>
-                    <TextView android:text="8:00" />
-                    <TextView android:text="Math" />
-                    <TextView android:text="Chem" />
-                    <TextView android:text="PE" />
-                    <TextView android:text="Eng" />
-                    <TextView android:text="" />
-                </TableRow>
-
-                <TableRow>
-                    <TextView android:text="9:00" />
-                    <TextView android:text="Bio" />
-                    <TextView android:text="" />
-                    <TextView android:text="Math" />
-                    <TextView android:text="" />
-                    <TextView android:text="CS" />
-                </TableRow>
-            </TableLayout>
         </LinearLayout>
+
     </ScrollView>
 
     <!-- BottomAppBar and FAB -->
