Some bugs fixing teacher_id

--- a/app/src/main/res/layout/item_attendance.xml
+++ b/app/src/main/res/layout/item_attendance.xml
@@ -1,58 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:background="@drawable/rounded_background"
+    android:orientation="horizontal"
+    android:padding="12dp"
+    android:gravity="center_vertical">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tvStudentName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:background="@drawable/rounded_background"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_weight="1"
+        android:text="Student Name"
+        android:textColor="#0044CC"
+        android:textSize="16sp"
+        android:fontFamily="@font/alatsi" />
 
-        <TextView
-            android:id="@+id/tvStudentName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Ahmed Khalid"
-            android:textColor="#0044CC"
-            android:textSize="16sp" />
+    <RadioGroup
+        android:id="@+id/rgAttendanceOptions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <RadioGroup
-            android:id="@+id/rgAttendanceOptions"
+        <RadioButton
+            android:id="@+id/rbPresent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:buttonTint="#990100"
+            android:text="Present" />
 
-            <RadioButton
-                android:id="@+id/rbPresent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:buttonTint="#990100"
-                android:text="Present" />
+        <RadioButton
+            android:id="@+id/rbAbsent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="#990100"
+            android:text="Absent" />
 
-            <RadioButton
-                android:id="@+id/rbAbsent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:buttonTint="#990100"
-                android:text="Absent" />
-
-            <RadioButton
-                android:id="@+id/rbLate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:buttonTint="#990100"
-                android:text="Late" />
-        </RadioGroup>
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <RadioButton
+            android:id="@+id/rbLate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="#990100"
+            android:text="Late" />
+    </RadioGroup>
+</LinearLayout>
