Do the last updated 6/8/6:02...

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,14 +46,14 @@
             <!-- Username -->
             <EditText
                 android:id="@+id/etLoginUsername"
-                android:hint="Username"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:padding="12dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/edittext_rounded_border"
+                android:hint="Email"
+                android:padding="12dp"
                 android:textColor="#000000"
-                android:textColorHint="#990100"
-                android:layout_marginBottom="16dp" />
+                android:textColorHint="#990100" />
 
             <!-- Password -->
             <EditText
