--- a/app/src/main/res/layout/fragment_registrar_add_class.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_class.xml
@@ -46,6 +46,7 @@
         <Spinner
             android:id="@+id/spnAcademicStage"
             android:layout_width="match_parent"
+            android:background="@android:drawable/btn_dropdown"
             android:layout_height="wrap_content"
             android:hint="Class Name" />
 
