--- a/app/src/main/res/layout/fragment_registrar_add_student.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_student.xml
@@ -69,6 +69,7 @@
 
             <Spinner
                 android:id="@+id/spnClasses"
+                android:background="@android:drawable/btn_dropdown"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
