--- a/app/src/main/res/layout/fragment_registrar_add_subject.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_subject.xml
@@ -56,6 +56,7 @@
         <!-- Grade Level -->
         <TextView
             android:id="@+id/txtSelectClasses"
+            android:background="@drawable/spinner_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Select Classes"
