--- a/app/src/main/res/layout/fragment_registrar_add_teacher.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_teacher.xml
@@ -72,6 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Select Classes"
+            android:background="@drawable/spinner_background"
             android:padding="12dp"
             android:focusable="false"
             android:clickable="true" />
