--- a/app/src/main/res/layout/fragment_registrar_assign_teacher.xml
+++ b/app/src/main/res/layout/fragment_registrar_assign_teacher.xml
@@ -47,12 +47,15 @@
         <Spinner
             android:id="@+id/spnClass"
             android:layout_width="match_parent"
+            android:background="@android:drawable/btn_dropdown"
+
             android:layout_height="wrap_content"
             android:hint="Class Name" />
 
         <Spinner
             android:id="@+id/spnHomeromTeacher"
             android:layout_width="match_parent"
+            android:background="@android:drawable/btn_dropdown"
             android:layout_height="wrap_content"
             android:hint="Homeroom Teacher" />
 
