--- a/app/src/main/res/layout/fragment_registrar_schedule.xml
+++ b/app/src/main/res/layout/fragment_registrar_schedule.xml
@@ -44,6 +44,7 @@
 
                 <Spinner
                     android:id="@+id/spnClasses"
+                    android:background="@android:drawable/btn_dropdown"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="8dp"
@@ -54,6 +55,7 @@
                 <Spinner
                     android:id="@+id/spnSubject"
                     android:layout_width="match_parent"
+                    android:background="@android:drawable/btn_dropdown"
                     android:layout_height="wrap_content" />
 
                 <TextView
@@ -68,6 +70,7 @@
                 <Spinner
                     android:id="@+id/spnStartTime"
                     android:layout_width="match_parent"
+                    android:background="@android:drawable/btn_dropdown"
                     android:layout_height="wrap_content" />
 
                 <Button
