--- a/app/src/main/res/layout/about_us_fragment.xml
+++ b/app/src/main/res/layout/about_us_fragment.xml
@@ -82,12 +82,33 @@
                     android:textColor="#000000"
                     android:layout_marginTop="8dp" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Work Done: All student activities"
-                    android:textSize="14sp"
-                    android:layout_marginTop="4dp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:text="Role:"
+                        android:textColor="#1565C0"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:visibility="visible" />
+                    <TextView
+                        android:id="@+id/txtEventDateTime"
+                        android:layout_width="wrap_content"
+                        android:text=" Student Module Lead"
+
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="4dp"/>
+                </LinearLayout>
+
+
+
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -130,12 +151,28 @@
                     android:textColor="#000000"
                     android:layout_marginTop="8dp" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Work Done: All teacher activities"
-                    android:textSize="14sp"
-                    android:layout_marginTop="4dp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:text="Role:"
+                        android:textColor="#1565C0"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:visibility="visible" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text=" Teacher Module Lead"
+
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="4dp"/>
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -178,12 +215,28 @@
                     android:textColor="#000000"
                     android:layout_marginTop="8dp" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Work Done: All registrar activities"
-                    android:textSize="14sp"
-                    android:layout_marginTop="4dp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:text="Role:"
+                        android:textColor="#1565C0"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:visibility="visible" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text=" Registrar Module Lead"
+
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="4dp"/>
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
