--- a/app/src/main/res/layout/fragment_student_home.xml
+++ b/app/src/main/res/layout/fragment_student_home.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal"
+        android:layout_marginBottom="100dp"
+
         android:paddingBottom="32dp">
 
         <!-- Title -->
